Display tx history

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path: ^1.9.1
   provider: ^6.1.5
   path_provider: ^2.1.5
+  dart_date: ^1.5.3
 
 dev_dependencies:
   flutter_test:
