--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dart_date: ^1.5.3
   qr_flutter: ^4.1.0
   share_plus: ^11.0.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
