--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   qr_flutter: ^4.1.0
   share_plus: ^11.0.0
   intl: ^0.20.2
+  shared_preferences: ^2.5.3
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
