--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_local_notifications: ^19.4.0
   timeago: ^3.7.1
   flutter_riverpod: ^2.6.1
+  screen_brightness: ^2.1.7
 
 dev_dependencies:
   flutter_test:
