--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   screen_brightness: ^2.1.7
   mobile_scanner: ^7.0.1
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
