--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   mobile_scanner: ^7.0.1
   permission_handler: ^12.0.1
   flutter_svg: ^2.2.1
+  skeletonizer: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
