--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   permission_handler: ^12.0.1
   flutter_svg: ^2.2.1
   skeletonizer: ^2.1.0+1
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
