--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: monero_light_wallet
-description: "A new Flutter project."
+name: skylight_wallet
+description: "A light Monero wallet."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -20,6 +20,13 @@ version: 1.0.0+1
 
 environment:
   sdk: ^3.8.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/launcher_icon.png"
+  adaptive_icon_background: "#263F5F"
+  adaptive_icon_foreground: "assets/launcher_icon.png"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -66,6 +73,8 @@ dependencies:
   skeletonizer: ^2.1.0+1
   flutter_secure_storage: ^9.2.4
   local_auth: ^2.3.0
+  flutter_launcher_icons: ^0.14.4
+  gpt_markdown: ^1.1.4
 
 dev_dependencies:
   flutter_test:
@@ -92,6 +101,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/privacy_policy.md
+    - assets/terms_of_service.md
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
