--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "monero_light_wallet" "\0"
+            VALUE "FileDescription", "skylight_wallet" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "monero_light_wallet" "\0"
+            VALUE "InternalName", "skylight_wallet" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "monero_light_wallet.exe" "\0"
-            VALUE "ProductName", "monero_light_wallet" "\0"
+            VALUE "OriginalFilename", "skylight_wallet.exe" "\0"
+            VALUE "ProductName", "skylight_wallet" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
