--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,9 @@ dependencies:
     sdk: flutter
 
   tor_ffi_plugin:
-    path: ./external/tor
+    git:
+      url: https://github.com/cypherstack/tor
+      ref: main
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
