--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   dart_date: 1.5.3
   qr_flutter: 4.1.0
   share_plus: 11.1.0
-  intl: ^0.20.2
+  intl: 0.20.2
   shared_preferences: 2.5.3
   http: 1.6.0
   workmanager: 0.9.0+3
