--- a/.github/workflows/build-builder-image.yml
+++ b/.github/workflows/build-builder-image.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - 'Dockerfile'
-      - '.github/workflows/build-builder-image.yml.yml'
+      - '.github/workflows/build-builder-image.yml'
   workflow_dispatch:
 
 env:
