Set correct trigger file in builder image workflow, add workflow_dispatch to release workflow

--- a/.github/workflows/build-builder-image.yml
+++ b/.github/workflows/build-builder-image.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'Dockerfile'
+      - 'Dockerfile.builder'
       - '.github/workflows/build-builder-image.yml'
   workflow_dispatch:
 
