Add missing environment to release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -228,6 +228,7 @@ jobs:
   release:
     name: Sign + Release
     runs-on: ubuntu-latest
+    environment: Release
     needs:
       - version
       - build-android-x86_64
