--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,8 @@ jobs:
           echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
           echo "TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
-  build-android-x86_64:
-    name: Android APK (x86_64)
+  build-android-apk:
+    name: Android APKs
     runs-on: ubuntu-latest
     environment: Release
     needs: version
@@ -47,109 +47,24 @@ jobs:
           storeFile=/workspace/android/keystore.jks
           EOF
 
-      - name: Build APK (x86_64)
+      - name: Build APKs (split per ABI)
         run: |
           VERSION='${{ needs.version.outputs.version }}'
           docker run --rm \
             -v "$PWD:/workspace" \
             -w /workspace \
             ghcr.io/magicgrants/skylight-wallet-builder:latest \
-            bash -c "flutter pub get && flutter build apk --dart-define=DEMO_MODE=true --release --target-platform android-x64"
+            bash -c "flutter pub get && flutter build apk --dart-define=DEMO_MODE=true --release --split-per-abi"
 
           mkdir -p dist
-          APK="$(ls -1 build/app/outputs/flutter-apk/*.apk | head -n1)"
-          cp -v "$APK" "dist/skylight-wallet-${VERSION}-x86_64.apk"
+          cp -v build/app/outputs/flutter-apk/app-arm64-v8a-release.apk "dist/skylight-wallet-${VERSION}-arm64-v8a.apk"
+          cp -v build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk "dist/skylight-wallet-${VERSION}-armeabi-v7a.apk"
+          cp -v build/app/outputs/flutter-apk/app-x86_64-release.apk "dist/skylight-wallet-${VERSION}-x86_64.apk"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: android-x86_64
-          path: dist/*.apk
-
-  build-android-arm64:
-    name: Android APK (arm64-v8a)
-    runs-on: ubuntu-latest
-    environment: Release
-    needs: version
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: Pull builder image
-        run: docker pull ghcr.io/magicgrants/skylight-wallet-builder:latest
-
-      - name: Set up Android signing
-        run: |
-          echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 -d > ./android/keystore.jks
-          cat > android/key.properties << EOF
-          storePassword=${{ secrets.ANDROID_STORE_PASSWORD }}
-          keyPassword=${{ secrets.ANDROID_KEY_PASSWORD }}
-          keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}
-          storeFile=/workspace/android/keystore.jks
-          EOF
-
-      - name: Build APK (arm64-v8a)
-        run: |
-          VERSION='${{ needs.version.outputs.version }}'
-          docker run --rm \
-            -v "$PWD:/workspace" \
-            -w /workspace \
-            ghcr.io/magicgrants/skylight-wallet-builder:latest \
-            bash -c "flutter pub get && flutter build apk --dart-define=DEMO_MODE=true --release --target-platform android-arm64"
-
-          mkdir -p dist
-          APK="$(ls -1 build/app/outputs/flutter-apk/*.apk | head -n1)"
-          cp -v "$APK" "dist/skylight-wallet-${VERSION}-arm64-v8a.apk"
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-arm64-v8a
-          path: dist/*.apk
-
-  build-android-armeabi-v7a:
-    name: Android APK (armeabi-v7a)
-    runs-on: ubuntu-latest
-    environment: Release
-    needs: version
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: Pull builder image
-        run: docker pull ghcr.io/magicgrants/skylight-wallet-builder:latest
-
-      - name: Set up Android signing
-        run: |
-          echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 -d > ./android/keystore.jks
-          cat > android/key.properties << EOF
-          storePassword=${{ secrets.ANDROID_STORE_PASSWORD }}
-          keyPassword=${{ secrets.ANDROID_KEY_PASSWORD }}
-          keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}
-          storeFile=/workspace/android/keystore.jks
-          EOF
-
-      - name: Build APK (armeabi-v7a)
-        run: |
-          VERSION='${{ needs.version.outputs.version }}'
-          docker run --rm \
-            -v "$PWD:/workspace" \
-            -w /workspace \
-            ghcr.io/magicgrants/skylight-wallet-builder:latest \
-            bash -c "flutter pub get && flutter build apk --dart-define=DEMO_MODE=true --release --target-platform android-arm"
-
-          mkdir -p dist
-          APK="$(ls -1 build/app/outputs/flutter-apk/*.apk | head -n1)"
-          cp -v "$APK" "dist/skylight-wallet-${VERSION}-armeabi-v7a.apk"
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-armeabi-v7a
+          name: android-apk
           path: dist/*.apk
 
   build-android-aab:
@@ -235,9 +150,7 @@ jobs:
     environment: Release
     needs:
       - version
-      - build-android-x86_64
-      - build-android-arm64
-      - build-android-armeabi-v7a
+      - build-android-apk
       - build-android-aab
       - build-linux-x86_64
     permissions:
